[package]
name = "timespoof-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "libtimespoof"
path = "src/lib.rs"
crate_type = ["cdylib"]

[[bin]]
name = "timespoof"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.26"
detour = { git = "https://github.com/Hpmason/detour-rs", branch = "fix-nightly1.67.0-changes" }
dll-syringe = "0.15.0"
winapi = "0.3.9"

[dev-dependencies]
iced = "0.7.0"
time = { version = "0.3.17", features = ['parsing'] }
